# kesoku

./: .gitignore  404.html  GEMINI.md  README.md  TODO.md  config.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
dev/agent-cycle/: index.html
dev/architecture/: index.html
dev/chatbot-interface/: index.html
dev/debugging/: index.html
dev/llm/: index.html
dev/memory/: index.html
dev/message/: index.html
dev/role-playing/: index.html
dev/skills/: index.html
dev/sys-prompt/: index.html
dev/tools/: index.html
docs/: CROSS_SESSION_CONTEXT_DESIGN.md  DESIGN.md  GOOGLE_CHAT_SETUP.md  MEMORY_DESIGN.md  MEMORY_DESIGN_v1.md  MEMORY_DESIGN_v2.md  MESSAGE_AND_LIFECYCLE.md  MESSAGING_REDESIGN.md
docs/en/: index.md
docs/zh/: index.md
integration_tests/: ai_image.md  discord_receive_image.md  shell_command.md  simple_math.md  web_search.md
scratch/: debug_view.py
search/: search_index.json
src/kesoku/: async_utils.py  cli.py  cli_chat.py  cli_service.py  config.py  constants.py  context.py  cron.py  db.py  logger.py
tests/: conftest.py  fixtures.py  test_agent.py  test_attachment_manager.py  test_chatbot_base.py  test_chatbot_parser.py  test_cli.py  test_cli_chat.py  test_concurrency.py  test_config.py  test_cron.py  test_cronjob_chatbot.py  test_cross_session_context.py  test_discord.py  test_discord_command.py  test_discord_ui.py  test_discord_voice_message.py  test_gateway.py  test_google_chat.py  test_llm.py  test_memory.py  test_prompt.py  test_skills.py  test_tool_runner.py  test_tools.py  test_turn_executor.py  test_wechat.py
tests/agent/: test_agent.py  test_file.py  test_history.py  test_lcm_engine.py  test_llm.py  test_memory.py  test_namer.py  test_prompt.py  test_skills.py  test_tool_runner.py  test_tools.py  test_turn_executor.py  test_turn_logger.py
tests/cli/: test_cli.py  test_cli_chat.py
tests/db/: test_db.py  (+1 more)
zh/: index.html
(+177 files in other folders)
